# img_tool

./: .gitignore  ImgToolbox.spec  README.md  main.py  pyproject.toml
.github/workflows/: build-releases.yml
app/: __init__.py  bridge.py  logger.py  settings_store.py  tasks.py  wrappers.py
docs/superpowers/plans/: 2026-04-10-synthesize-implementation.md
docs/superpowers/specs/: 2026-04-10-synthesize-design.md  2026-04-13-ux-ui-improvements-design.md
reports/: iteration_report.md
script/: bgr2rgb.py  rename2.py  reorder_labels.py  select_diverse.py  synthesize.py  更改json路径.py
tests/: conftest.py  test_bridge.py  test_manual_synthesize.py  test_settings_contract.py  test_stage2_contracts.py  test_tasks.py  test_wrappers.py
ui/: index.html  new.html
