[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "img-tool"
version = "1.2.0"
description = "离线桌面图片批量处理工具箱（pywebview + Python）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.2",
    "numpy>=2.2.0",
    "onnxruntime==1.19.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pyinstaller>=6.12.0",
    "pywebview>=5.4",
    "rembg>=2.0.75",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.setuptools]
packages = ["app"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
